--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,7 +19,7 @@
 <body class='font-base text-gray-900' x-data="{ openLoginModal: false }">
 
     <div></div>
-    <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
+    <header class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
         <div id="headerWrapper" class="relative flex  gap-6 items-center justify-center mx-auto">
             
             <!-- Logo Section -->
