--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -8,16 +8,67 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body class="font-base text-gray-900">
+    <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-200 lg:p-4">
 
+        <!-- Nav bar -->
+        <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:block lg:relative h-screen bg-white flex flex-col gap-3 rounded-2xl px-4 lg;col-span-1">
+            <div class="flex gap-2">
+                <img class="block w-8" src="{% static 'images/eaglespoint-logo.png' %}">
+                <span>EaglesPoint</span>
+            </div>
+            <ul class="flex flex-col *:py-2 *px-1 *:rounded-md *:hover:bg-slate-100">
+                <li><a class="w-full block" href="{% url 'adminv2:dashboard' %}"><i class="fa fa-home"></i> Dashboard</a></li>
+                <li><a 
+                    class="w-full block " 
+                    href="{% url 'adminv2:listing' %}">
+                    <i class="fa fa-building"></i> Listing</a>
+                </li> 
+                <li>
+                    <a class="w-full block " 
+                    href="{% url 'adminv2:listing' %}">
+                    <i class="fa fa-user"></i> User</a></li> 
+                <li>
+                    
+                    <form method="POST" action="{% url 'user:logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="text-red-500 text-left py-2 w-full"><i class="fa fa-sign-out"></i> Logout</button>
+                    </form>
+                </li>
+            </ul>
+        </nav>
 
-    <aside>
-        <a href="{% url 'adminv2:dashboard' %}">Dashboard</a>
-        <a href="{% url 'adminv2:listing' %}">Listing</a>
-    </aside>
-    <main>
-        {% block content %}{% endblock %}
-    </main>
+        <!-- Main content -->
+        <div class="lg:col-span-3 px-4">
+            <header class="flex justify-between">
+                <div>
+                    <h1 class="text-2xl font-bold">Admin Panel</h1>
+                    <h2 class="text-2xl font-medium">
+                        {% block section_title %} {% endblock %}
+                    </h2>
+                </div>
+
+                <!-- Mobile Menu Toggle -->
+                <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center p-2 text-sm 
+                text-gray-500 rounded-lg ml-auto lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
+                <span class="sr-only">Open main menu</span>
+                <!-- <i class="fa fa-hamburger w-6 h-6" :class="isOpen ? 'fa-close' : 'fa fa-hamburger'"></i> -->
+                <!-- Hamburger Icon (Visible by Default) -->
+                <svg x-show="!isOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+                </svg>
+
+                <!-- Close Icon -->
+                <svg x-show="isOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                </svg>
+            </button>
+            </header>
+            
+            {% block content %}{% endblock %}
+        </div>
+    </div>
+
    
 </body>
 
