--- a/adminv2/templates/adminv2/dashboard.html
+++ b/adminv2/templates/adminv2/dashboard.html
@@ -1,9 +1,70 @@
 {% extends 'adminv2/base.html'%}
 {% load static %}
 
-
+{% block section_title %} Dashboard {% endblock %}
 {% block content %} 
-    <h1>Welcome to Admin Dashboard</h1>
-    <p>Manage employees, employers, and company data here.</p>
+    <section class="grid grid-cols-1 lg:grid-cols-3 gap-2">
+        <div class="flex justify-between pt-2 pb-4 px-2 rounded-xl bg-white shadow-2xl">
+            <div>
+                <div class="text-gray-600 text-sm font-semibold">
+                    Total Users
+                </div>
+                <div class="text-2xl font-bold">
+                    2300
+                </div>
+            </div>
+            <div class="bg-black w-max p-3 rounded-lg">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff"><path d="M240.92-268.31q51-37.84 111.12-59.77Q412.15-350 480-350t127.96 21.92q60.12 21.93 111.12 59.77 37.3-41 59.11-94.92Q800-417.15 800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 62.85 21.81 116.77 21.81 53.92 59.11 94.92ZM480.01-450q-54.78 0-92.39-37.6Q350-525.21 350-579.99t37.6-92.39Q425.21-710 479.99-710t92.39 37.6Q610-634.79 610-580.01t-37.6 92.39Q534.79-450 480.01-450ZM480-100q-79.15 0-148.5-29.77t-120.65-81.08q-51.31-51.3-81.08-120.65Q100-400.85 100-480t29.77-148.5q29.77-69.35 81.08-120.65 51.3-51.31 120.65-81.08Q400.85-860 480-860t148.5 29.77q69.35 29.77 120.65 81.08 51.31 51.3 81.08 120.65Q860-559.15 860-480t-29.77 148.5q-29.77 69.35-81.08 120.65-51.3 51.31-120.65 81.08Q559.15-100 480-100Zm0-60q54.15 0 104.42-17.42 50.27-17.43 89.27-48.73-39-30.16-88.11-47Q536.46-290 480-290t-105.77 16.65q-49.31 16.66-87.92 47.2 39 31.3 89.27 48.73Q425.85-160 480-160Zm0-350q29.85 0 49.92-20.08Q550-550.15 550-580t-20.08-49.92Q509.85-650 480-650t-49.92 20.08Q410-609.85 410-580t20.08 49.92Q450.15-510 480-510Zm0-70Zm0 355Z"/></svg>    
+            </div>
+            
+        </div>
+
+        <div class="flex justify-between pt-2 pb-4 px-2 rounded-xl bg-white shadow-2xl">
+        <div>
+            <div class="text-gray-600 text-sm font-semibold">
+                Total Listing
+            </div>
+            <div class="text-2xl font-bold">
+                30
+            </div>
+        </div>
+        <div class="bg-black w-max p-3 rounded-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff"><path d="M760-384.61v-270L550-801.54 340-654.61v83.84h-60v-113.46l270-192.69 270 192.69v299.62h-60ZM550-801.54Zm21.92 170.39h36.16v-36.16h-36.16v36.16Zm-80 0h36.16v-36.16h-36.16v36.16Zm80 80h36.16v-36.16h-36.16v36.16Zm-80 0h36.16v-36.16h-36.16v36.16ZM268.08-216.92l290.3 82.15 238.77-74q-3.07-13.61-12.69-20.88t-21.77-7.27H566.8q-26.18 0-44.49-2-18.31-2-37.62-8.77l-90.3-29.85 17.76-58.77 81 28.16q18.16 6.15 41.93 8.38 23.77 2.23 67.61 2.85 0-14.85-6.69-25.62-6.69-10.77-17.62-14.54l-232.07-85.23q-1.16-.38-2.12-.57-.96-.2-2.11-.2h-74v206.16ZM68.08-100v-383.07h273.54q6.3 0 12.76 1.38 6.47 1.39 12 3.23l233.08 85.85q27.23 10.07 45.23 35.65 18 25.58 18 60.04h100q43.08 0 70.19 27.81Q860-241.31 860-196.92v32.3L560.38-71.54l-292.3-83.38V-100h-200Zm60-60h80v-263.08h-80V-160Z"/></svg>  
+        </div>
+        
+        </div>
+
+        <div class="flex justify-between pt-2 pb-4 px-2 rounded-xl bg-white shadow-2xl">
+            <div>
+                <div class="text-gray-600 text-sm">
+                    Total Articles
+                </div>
+                <div class="text-2xl font-bold">
+                    24
+                </div>
+            </div>
+            <div class="bg-black w-max p-3 rounded-lg">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff"><path d="M290-290h260v-60H290v60Zm0-160h380v-60H290v60Zm0-160h380v-60H290v60Zm-77.69 470Q182-140 161-161q-21-21-21-51.31v-535.38Q140-778 161-799q21-21 51.31-21h535.38Q778-820 799-799q21 21 21 51.31v535.38Q820-182 799-161q-21 21-51.31 21H212.31Zm0-60h535.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46v-535.38q0-4.62-3.85-8.46-3.84-3.85-8.46-3.85H212.31q-4.62 0-8.46 3.85-3.85 3.84-3.85 8.46v535.38q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85ZM200-760v560-560Z"/></svg>
+            </div>
+            
+        </div>
+
+        <div class="flex justify-between pt-2 pb-4 px-2 rounded-xl bg-white shadow-2xl">
+            <div>
+                <div class="text-gray-600 text-sm">
+                    Total Users
+                </div>
+                <div class="text-2xl font-bold">
+                    2300
+                </div>
+            </div>
+            <div class="bg-black w-max p-3 rounded-lg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff"><path d="M240.92-268.31q51-37.84 111.12-59.77Q412.15-350 480-350t127.96 21.92q60.12 21.93 111.12 59.77 37.3-41 59.11-94.92Q800-417.15 800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 62.85 21.81 116.77 21.81 53.92 59.11 94.92ZM480.01-450q-54.78 0-92.39-37.6Q350-525.21 350-579.99t37.6-92.39Q425.21-710 479.99-710t92.39 37.6Q610-634.79 610-580.01t-37.6 92.39Q534.79-450 480.01-450ZM480-100q-79.15 0-148.5-29.77t-120.65-81.08q-51.31-51.3-81.08-120.65Q100-400.85 100-480t29.77-148.5q29.77-69.35 81.08-120.65 51.3-51.31 120.65-81.08Q400.85-860 480-860t148.5 29.77q69.35 29.77 120.65 81.08 51.31 51.3 81.08 120.65Q860-559.15 860-480t-29.77 148.5q-29.77 69.35-81.08 120.65-51.3 51.31-120.65 81.08Q559.15-100 480-100Zm0-60q54.15 0 104.42-17.42 50.27-17.43 89.27-48.73-39-30.16-88.11-47Q536.46-290 480-290t-105.77 16.65q-49.31 16.66-87.92 47.2 39 31.3 89.27 48.73Q425.85-160 480-160Zm0-350q29.85 0 49.92-20.08Q550-550.15 550-580t-20.08-49.92Q509.85-650 480-650t-49.92 20.08Q410-609.85 410-580t20.08 49.92Q450.15-510 480-510Zm0-70Zm0 355Z"/></svg>    
+            </div>
+            
+        </div>
+
+    </section>
+    
 {% endblock %}
 
