--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -14,7 +14,7 @@
     <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-200 lg:p-4">
 
         <!-- Nav bar -->
-        <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:block lg:relative h-screen bg-white flex flex-col gap-5 p-4 lg:col-span-1 z-[100000]">
+        <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:block h-screen bg-white flex flex-col gap-5 p-4 lg:sticky top-0 lg:col-span-1 z-[100000]">
             <div class="flex gap-2">
                 <img class="block w-16" src="{% static 'images/eaglespoint-logo.png' %}">
                 <!-- <span>EaglesPoint</span> -->
