--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,7 +19,7 @@
 <body class='font-base text-gray-900' x-data="{ openLoginModal: false }">
 
     <div></div>
-    <header class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
+    <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
         <div id="headerWrapper" class="relative flex  gap-6 items-center justify-center mx-auto">
             
             <!-- Logo Section -->
@@ -34,20 +34,21 @@
                 <button class="bg-blue-600 text-white h-full p-2 rounded-r-lg" type="submit"><i class="fa fa-search fa-lg"></i></button>
             </form>
     
-            <!-- Mobile Menu Toggle -->
-            <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center p-2 text-sm 
-                text-gray-500 rounded-lg ml-auto lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
+           <!-- Mobile Menu Toggle -->
+           <button @click="isOpen = !isOpen" type="button" class="inline-flex items-center p-2 text-sm 
+           text-gray-500 rounded-lg ml-auto lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
                 <span class="sr-only">Open main menu</span>
                 <!-- <i class="fa fa-hamburger w-6 h-6" :class="isOpen ? 'fa-close' : 'fa fa-hamburger'"></i> -->
-                 <!-- Hamburger Icon (Visible by Default) -->
-                <svg x-show="!isOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                </svg>
-
-                <!-- Close Icon -->
-                <svg x-show="isOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
-                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-                </svg>
+                <template x-if="!isOpen">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+                    </svg>
+                </template>
+                <template x-if="isOpen">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                    </svg>
+                </template>
             </button>
     
             <!-- Navigation Menu -->
